# eggricesoy-rs

./: Cargo.toml  LICENSE.md  README.md  here.txt
src/: lib.rs  main.rs
src/lib/: http.rs  logger.rs
tests/: lib_test.rs  test_config.yaml
