[package]
name = "eggricesoy"
version = "1.2.0"
edition = "2018"
authors = ["Nocoto Day <notcoding.today>"]
description = "Helper library for eggricesoy Rust binaries"
license-file = "LICENSE.md"
readme = "README.md"
homepage = "eggrice.soy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
log4rs = "1.0.0"
log = "0.4.14"
threadpool = "1.8.1"
