[package]
name = "eggricesoy"
version = "2.0.0"
edition = "2018"
authors = ["Nocoto Day <notcoding.today>"]
description = "Helper library for eggricesoy Rust binaries"
license-file = "LICENSE.md"
readme = "README.md"
homepage = "eggrice.soy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["env"] }
log4rs = "1.2.0"
log = "0.4.17"
threadpool = "1.8.1"
